--- a/MobileApplication/package.json
+++ b/MobileApplication/package.json
@@ -12,9 +12,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@fortawesome/react-native-fontawesome": "^0.1.0",
+    "immutable": "^4.0.0-rc.12",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-native": "0.59.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-maps": "^0.24.0",
+    "react-native-svg": "^9.3.7",
     "react-navigation": "^3.6.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
@@ -30,5 +36,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
