--- a/MobileApplication/package.json
+++ b/MobileApplication/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@fortawesome/react-native-fontawesome": "^0.1.0",
     "@react-native-community/async-storage": "^1.3.3",
+    "axios": "^0.18.0",
     "base-64": "^0.1.0",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
