--- a/MobileApplication/package.json
+++ b/MobileApplication/package.json
@@ -23,7 +23,9 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-image-picker": "^0.28.1",
+    "react-native-iphone-x-helper": "^1.2.0",
     "react-native-maps": "^0.24.0",
+    "react-native-modal": "^11.0.1",
     "react-native-svg": "^9.3.7",
     "react-navigation": "^3.11.0",
     "react-redux": "^6.0.1",
