--- a/MobileApplication/android/settings.gradle
+++ b/MobileApplication/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'GBDS'
+include ':react-native-extra-dimensions-android'
+project(':react-native-extra-dimensions-android').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-extra-dimensions-android/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 include ':@react-native-community_async-storage'
