--- a/MobileApplication/package.json
+++ b/MobileApplication/package.json
@@ -21,6 +21,7 @@
     "react": "16.8.3",
     "react-native": "0.59.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-image-picker": "^0.28.1",
     "react-native-iphone-x-helper": "^1.2.0",
