add api for new post

--- a/MobileApplication/package.json
+++ b/MobileApplication/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/async-storage": "^1.4.0",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
+    "buffer": "^5.2.1",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
     "react": "16.8.3",
@@ -29,6 +30,7 @@
     "react-native-modal": "^11.0.1",
     "react-native-svg": "^9.4.0",
     "react-native-toast-native": "^1.2.1",
+    "react-native-uuid": "^1.4.9",
     "react-navigation": "^3.11.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
