--- a/MobileApplication/android/app/build.gradle
+++ b/MobileApplication/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-resizer')
     implementation project(':react-native-toast-native')
     implementation project(':react-native-extra-dimensions-android')
     implementation project(':react-native-image-picker')
