--- a/MobileApplication/android/settings.gradle
+++ b/MobileApplication/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'GBDS'
+include ':react-native-image-resizer'
+project(':react-native-image-resizer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-resizer/android')
 include ':react-native-toast-native'
 project(':react-native-toast-native').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-toast-native/android')
 include ':react-native-extra-dimensions-android'
