--- a/MobileApplication/package.json
+++ b/MobileApplication/package.json
@@ -25,6 +25,7 @@
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-image-picker": "^0.28.1",
+    "react-native-image-resizer": "^1.0.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-maps": "^0.24.0",
     "react-native-modal": "^11.0.1",
