--- a/MobileApplication/android/app/build.gradle
+++ b/MobileApplication/android/app/build.gradle
@@ -107,6 +107,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     splits {
         abi {
@@ -138,7 +139,8 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-image-resizer')
+    implementation project(':react-native-fast-image')
+    implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-toast-native')
     implementation project(':react-native-extra-dimensions-android')
     implementation project(':react-native-image-picker')
