--- a/MobileApplication/package.json
+++ b/MobileApplication/package.json
@@ -23,9 +23,10 @@
     "react-native": "0.59.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-fast-image": "^6.0.3",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-image-crop-picker": "^0.24.1",
     "react-native-image-picker": "^0.28.1",
-    "react-native-image-resizer": "^1.0.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-maps": "^0.24.0",
     "react-native-modal": "^11.0.1",
