--- a/MobileApplication/android/app/build.gradle
+++ b/MobileApplication/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-linear-gradient')
     implementation project(':react-native-fast-image')
     implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-toast-native')
